# app.jeliya.ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/: design-tokens.json
crates/bantaba-core/src/: lib.rs  supervisor.rs
crates/bantabad/src/: rpc.rs
crates/jeliya-companion/: Cargo.toml
crates/jeliya-companion/src/: channel.rs  connection.rs  dispatch.rs  lib.rs  offers.rs  tests.rs  transport.rs
crates/jeliya-control/: Cargo.toml
crates/jeliya-control/src/: crypto.rs  gateway.rs  lib.rs  noise.rs  records.rs  sas.rs  session.rs
crates/jeliya-core/: Cargo.toml
crates/jeliya-core/src/: engine.rs  identity.rs  lib.rs  localstate.rs  recovery.rs  supervisor.rs
crates/jeliya-protocol/: Cargo.toml
crates/jeliya-protocol/src/: codec.rs  frame.rs  hello.rs  lib.rs  message.rs  registry.rs  tests.rs
crates/jeliyad/: Cargo.toml
crates/jeliyad/src/: companion.rs  main.rs
docs/: PROTOCOL.md  accessibility-checklist.md  agent-guide.md  agent-marketplace.md  agent-orchestration.md  capability-status.md  companion-control-protocol-decision.md  control-wire-protocol.md  design-tokens.md  glossary-fr.md  hostile-frontend-containment-decision.md  i18n.md  index.md  iroh-rooms-portable-traits-decision.md  known-gaps-roadmap.md  phase-0-gate-verdict.md  phase-1-evidence-package.md  phase-1-gate-verdict.md  phase-1-plan.md  phase-1-security-review-scope.md  phase-1-security-review.md  platform-matrix-decision.md  platform-matrix.md  production-deployment-decision.md  production-deployment.md  production-ownership.md  provider-selection-decision.md  realnet-runbook.md  recovery-bundle-decision.md  relay-auth-admission-rule-decision.md  relay-load-and-cost-ceilings-decision.md  release-vs-main.md  room-attention.md  room-device-key-decision.md  room-workbench.md  security-threat-model.md  self-label.md  signing-deferral-decision.md  signing-notarization.md  store-degraded-runbook.md  (+4 more)
docs/evidence/: phase-0-relay-spike.md
docs/evidence/v0.6.0/: direct.json  direct.json.sig  relay.json  relay.json.sig
packaging/: README.md  bantaba.rb  install.ps1  install.sh
scripts/: bantaba-agent.mjs  bantaba-fleet.mjs  check-design-tokens.mjs  check-docs.test.mjs  check-release.mjs  check-release.test.mjs  check-secret-storage.mjs  check-ui-i18n.mjs  check-workspace-lints.mjs  check-workspace-lints.test.mjs  e2e.mjs  fleet-e2e.mjs  make-bundle.sh  realnet-check.mjs  realnet-evidence.mjs  realnet-evidence.test.mjs  realnet-host.mjs  realnet-lib.mjs
spike/relay-connect/: Cargo.toml  NOTES.md  README.md  build.sh  run-spike.mjs
spike/relay-connect/browser-client/: Cargo.toml
spike/relay-connect/browser-client/src/: lib.rs
spike/relay-connect/native-endpoint/: Cargo.toml
spike/relay-connect/native-endpoint/src/: main.rs
spike/relay-connect/relay-auth/: Cargo.toml
spike/relay-connect/relay-auth/src/: main.rs
spike/relay-connect/relay-server/: Cargo.toml
spike/relay-connect/relay-server/src/: main.rs
spike/relay-connect/web/: index.html  spike.mjs
tools/step7-kdf-probe/: Cargo.toml  README.md
tools/step7-kdf-probe/src/: main.rs
ui/: package-lock.json  package.json
ui/e2e/: compose.spec.ts  responsive.spec.ts
ui/src/: App.tsx  styles.css
ui/src/components/: Composer.tsx  FleetDashboard.tsx  InviteModal.tsx  QrCode.tsx
ui/src/l10n/: README.md  catalog.ts  en.ts  errorDisplay.ts  formats.ts  fr.ts  l10n.test.ts  strings.tsx  template.tsx  tokens.ts  wireDisplay.ts
ui/src/lib/: fleet.test.ts  fleet.ts  format.ts  invite.test.ts  invite.ts  lastSeen.test.ts  mock.ts  protocol.ts  qr.test.ts  qr.ts  roomList.test.ts  roomList.ts  timelineRuns.test.ts  timelineRuns.ts
ui/src/lib/conformance/: corpus.json  fleet-attention.fixtures.json  harness.ts  invite-lifecycle.fixtures.json  qr-invite.fixtures.json  room-attention.fixtures.json  room-list.fixtures.json  timeline-runs.fixtures.json
ui/src/lib/control/: channel.ts  codec.ts  constants.ts  controlKey.ts  corpus.test.ts  crypto.test.ts  crypto.ts  frame.ts  hello.ts  index.ts  messages.ts  noise.test.ts  noise.ts  session.test.ts  session.ts
ui/src/lib/control/conformance/: noise-cross-vector.json
