[package]
name = "jeliyad"
version = "0.6.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Jeliya daemon: local-only WebSocket server implementing docs/PROTOCOL.md over jeliya-core"

[[bin]]
name = "jeliyad"
path = "src/main.rs"

[features]
# Embed the built web UI (ui/dist) into the binary so a single `jeliyad`
# serves the SPA on its own loopback origin. Requires `ui/dist` to exist at
# build time (run `npm run build` in ui/ first). Off by default so a plain
# `cargo build` stays a lean WS-only daemon with no UI-build dependency.
embed-ui = ["dep:rust-embed"]
# Diagnostic-only verifier binary. Off by default and never enabled for the
# five release artifacts. jeliya-core forwards to the published upstream seam
# and still fails this build closed if the pin ever loses it.
relay-only-test = ["jeliya-core/relay-only-test"]

[dependencies]
jeliya-core = { path = "../jeliya-core" }
# The companion control plane (D5b): the Iroh control endpoint runtime, the
# enforcing gateway it drives, and the wire method types the engine-backed
# dispatch maps. Behind the opt-in --companion-control flag.
jeliya-companion = { path = "../jeliya-companion" }
jeliya-control = { path = "../jeliya-control" }
jeliya-protocol = { path = "../jeliya-protocol" }
# Companion secret derivation from the device seed (the versioned-context
# derive_key discipline of jeliya-core's room_device), and zeroization of the
# derived seeds. Same majors jeliya-core already resolves.
blake3 = "1"
zeroize = "1"
# control_keys.json durability: the exact-pinned atomic-replacement semantics
# state.json already relies on (see jeliya-core's localstate.rs).
atomicwrites = "=0.4.4"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal", "io-util"] }
tokio-tungstenite = "0.26"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTP + WebSocket on one loopback port: hyper serves the UI and upgrades /ws.
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
hyper-tungstenite = "0.30"
# Platform data dir + open the UI in the browser on first run.
dirs = "6"
webbrowser = "1"
rust-embed = { version = "8", optional = true, features = ["interpolate-folder-path", "debug-embed"] }
url = "2"
# Sidecar lifecycle: single-instance data-dir lock, WS auth token, rolling log.
fd-lock = "4"
getrandom = "0.4"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
