[package]
name = "step7-kdf-probe"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone evidence harness — deliberately NOT a workspace member so it can
# pin the exact reviewed crypto versions independently of the workspace graph.
[workspace]

[dependencies]
argon2 = { version = "=0.5.3", features = ["zeroize"] }
aes-gcm = { version = "=0.10.3", features = ["zeroize"] }
zeroize = "=1.9.0"
