[package]
name = "spike-native-endpoint"
version = "0.0.0-spike"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "THROWAWAY Phase 0 spike (#23): native iroh echo endpoint behind a dedicated relay."

[[bin]]
name = "spike-native-endpoint"
path = "src/main.rs"

[dependencies]
iroh = { workspace = true }
iroh-relay = { workspace = true }
n0-error = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[lints]
workspace = true
