[package]
name = "spike-relay-server"
version = "0.0.0-spike"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
description = "THROWAWAY Phase 0 spike (#23): dedicated iroh-relay with token-validating AccessControl."

[[bin]]
name = "spike-relay-server"
path = "src/main.rs"

[dependencies]
iroh-relay = { workspace = true, features = ["server"] }
n0-error = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
ed25519-dalek = { workspace = true }
url = { workspace = true }
base64ct = { version = "1", features = ["alloc"] }
hex = "0.4"

[lints]
workspace = true
